--- a/src/common/scss/common.scss
+++ b/src/common/scss/common.scss
@@ -6,6 +6,8 @@
 }
 
 html {
+  line-height: 1.15;
+  -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
   -webkit-font-smoothing: antialiased;
@@ -13,12 +15,13 @@ html {
 }
 
 body {
+  min-width: 320px;
+  padding: 0;
+  margin: 0;
+  font-size: 1rem;
+  line-height: 1.15;
   color: $c000;
   background-color: $fff;
-  font-size: 1.5rem;
-  margin: 0;
-  padding: 0;
-  line-height: 1.5;
   touch-action: none;
 }
 
