--- a/src/common/scss/semantic.scss
+++ b/src/common/scss/semantic.scss
@@ -1,42 +1,15 @@
-/*
- * # Semantic UI - 2.4.0
- * https://github.com/Semantic-Org/Semantic-UI
- * http://www.semantic-ui.com/
- *
- * Copyright 2014 Contributors
- * Released under the MIT license
- * http://opensource.org/licenses/MIT
- *
- */
+
  @import url('https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic&subset=latin');
  /*!
   * # Semantic UI 2.4.0 - Reset
   * http://github.com/semantic-org/semantic-ui/
-  *
-  *
-  * Released under the MIT license
-  * http://opensource.org/licenses/MIT
   *
   */
  
  /*******************************
               Reset
  *******************************/
- 
- /* Border-Box */
- 
- *,
- *:before,
- *:after {
-   -webkit-box-sizing: inherit;
-   box-sizing: inherit;
- }
- 
- html {
-   -webkit-box-sizing: border-box;
-   box-sizing: border-box;
- }
- 
+
  /* iPad Input Shadows */
  
  input[type="text"],
@@ -47,42 +20,10 @@
    -moz-appearance: none;
    /* mobile firefox too! */
  }
- 
- /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
- 
- /* Document
-    ========================================================================== */
- 
- /**
-  * 1. Correct the line height in all browsers.
-  * 2. Prevent adjustments of font size after orientation changes in
-  *    IE on Windows Phone and in iOS.
-  */
- 
- html {
-   line-height: 1.15;
-   /* 1 */
-   -ms-text-size-adjust: 100%;
-   /* 2 */
-   -webkit-text-size-adjust: 100%;
-   /* 2 */
- }
- 
- /* Sections
-    ========================================================================== */
- 
- /**
-  * Remove the margin in all browsers (opinionated).
-  */
- 
- body {
-   margin: 0;
- }
- 
+
  /**
   * Add the correct display in IE 9-.
   */
- 
  article,
  aside,
  footer,
@@ -91,25 +32,7 @@
  section {
    display: block;
  }
- 
- /**
-  * Correct the font size and margin on `h1` elements within `section` and
-  * `article` contexts in Chrome, Firefox, and Safari.
-  */
- 
- h1 {
-   font-size: 2em;
-   margin: 0.67em 0;
- }
- 
- /* Grouping content
-    ========================================================================== */
- 
- /**
-  * Add the correct display in IE 9-.
-  * 1. Add the correct display in IE.
-  */
- 
+
  figcaption,
  figure,
  main {
@@ -148,24 +71,10 @@
  pre {
    font-family: monospace, monospace;
    /* 1 */
-   font-size: 1em;
+   font-size: 1rem;
    /* 2 */
  }
- 
- /* Text-level semantics
-    ========================================================================== */
- 
- /**
-  * 1. Remove the gray background on active links in IE 10.
-  * 2. Remove gaps in links underline in iOS 8+ and Safari 8+.
-  */
- 
- a {
-   background-color: transparent;
-   /* 1 */
-   -webkit-text-decoration-skip: objects;
-   /* 2 */
- }
+
  
  /**
   * 1. Remove the bottom border in Chrome 57- and Firefox 39-.
@@ -181,25 +90,7 @@
    text-decoration: underline dotted;
    /* 2 */
  }
- 
- /**
-  * Prevent the duplicate application of `bolder` by the next rule in Safari 6.
-  */
- 
- b,
- strong {
-   font-weight: inherit;
- }
- 
- /**
-  * Add the correct font weight in Chrome, Edge, and Safari.
-  */
- 
- b,
- strong {
-   font-weight: bolder;
- }
- 
+
  /**
   * 1. Correct the inheritance and scaling of font size in all browsers.
   * 2. Correct the odd `em` font sizing in all browsers.
@@ -210,7 +101,7 @@
  samp {
    font-family: monospace, monospace;
    /* 1 */
-   font-size: 1em;
+   font-size: 1rem;
    /* 2 */
  }
  
@@ -253,11 +144,11 @@
  }
  
  sub {
-   bottom: -0.25em;
+   bottom: -0.25rem;
  }
  
  sup {
-   top: -0.5em;
+   top: -0.5rem;
  }
  
  /* Embedded content
@@ -284,11 +175,7 @@
  /**
   * Remove the border on images inside links in IE 10-.
   */
- 
- img {
-   border-style: none;
- }
- 
+
  /**
   * Hide the overflow in IE.
   */
@@ -310,9 +197,9 @@
  optgroup,
  select,
  textarea {
-   font-family: sans-serif;
+   font-family: 'Open Sans', sans-serif;
    /* 1 */
-   font-size: 100%;
+   font-size: 1rem;
    /* 1 */
    line-height: 1.15;
    /* 1 */
@@ -549,162 +436,11 @@
   * http://opensource.org/licenses/MIT
   *
   */
- 
- /*******************************
-              Page
- *******************************/
- 
- html,
- body {
-   height: 100%;
- }
- 
- html {
-   font-size: 14px;
- }
- 
- body {
-   margin: 0px;
-   padding: 0px;
-   overflow-x: hidden;
-   min-width: 320px;
-   background: #FFFFFF;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-   font-size: 14px;
-   line-height: 1.4285em;
-   color: rgba(0, 0, 0, 0.87);
-   font-smoothing: antialiased;
- }
- 
+
  /*******************************
               Headers
  *******************************/
- 
- h1,
- h2,
- h3,
- h4,
- h5 {
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-   line-height: 1.28571429em;
-   margin: calc(2rem -  0.14285714em ) 0em 1rem;
-   font-weight: bold;
-   padding: 0em;
- }
- 
- h1 {
-   min-height: 1rem;
-   font-size: 2rem;
- }
- 
- h2 {
-   font-size: 1.71428571rem;
- }
- 
- h3 {
-   font-size: 1.28571429rem;
- }
- 
- h4 {
-   font-size: 1.07142857rem;
- }
- 
- h5 {
-   font-size: 1rem;
- }
- 
- h1:first-child,
- h2:first-child,
- h3:first-child,
- h4:first-child,
- h5:first-child {
-   margin-top: 0em;
- }
- 
- h1:last-child,
- h2:last-child,
- h3:last-child,
- h4:last-child,
- h5:last-child {
-   margin-bottom: 0em;
- }
- 
- /*******************************
-              Text
- *******************************/
- 
- p {
-   margin: 0em 0em 1em;
-   line-height: 1.4285em;
- }
- 
- p:first-child {
-   margin-top: 0em;
- }
- 
- p:last-child {
-   margin-bottom: 0em;
- }
- 
- /*-------------------
-         Links
- --------------------*/
- 
- a {
-   color: #4183C4;
-   text-decoration: none;
- }
- 
- a:hover {
-   color: #1e70bf;
-   text-decoration: none;
- }
- 
- /*******************************
-          Scrollbars
- *******************************/
- 
- /*******************************
-           Highlighting
- *******************************/
- 
- /* Site */
- 
- ::-webkit-selection {
-   background-color: #CCE2FF;
-   color: rgba(0, 0, 0, 0.87);
- }
- 
- ::-moz-selection {
-   background-color: #CCE2FF;
-   color: rgba(0, 0, 0, 0.87);
- }
- 
- ::selection {
-   background-color: #CCE2FF;
-   color: rgba(0, 0, 0, 0.87);
- }
- 
- /* Form */
- 
- textarea::-webkit-selection,
- input::-webkit-selection {
-   background-color: rgba(100, 100, 100, 0.4);
-   color: rgba(0, 0, 0, 0.87);
- }
- 
- textarea::-moz-selection,
- input::-moz-selection {
-   background-color: rgba(100, 100, 100, 0.4);
-   color: rgba(0, 0, 0, 0.87);
- }
- 
- textarea::selection,
- input::selection {
-   background-color: rgba(100, 100, 100, 0.4);
-   color: rgba(0, 0, 0, 0.87);
- }
- 
+
  /* Force Simple Scrollbars */
  
  body ::-webkit-scrollbar {
@@ -751,60 +487,43 @@
  body .ui.inverted::-webkit-scrollbar-thumb:hover {
    background: rgba(255, 255, 255, 0.35);
  }
- 
- /*******************************
-         Global Overrides
- *******************************/
- 
- /*******************************
-          Site Overrides
- *******************************/
- /*!
-  * # Semantic UI 2.4.0 - Button
-  * http://github.com/semantic-org/semantic-ui/
-  *
-  *
-  * Released under the MIT license
-  * http://opensource.org/licenses/MIT
-  *
-  */
- 
+
  /*******************************
              Button
  *******************************/
  
  .ui.button {
-   cursor: pointer;
-   display: inline-block;
-   min-height: 1em;
-   outline: none;
-   border: none;
-   vertical-align: baseline;
-   background: #E0E1E2 none;
-   color: rgba(0, 0, 0, 0.6);
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
-   margin: 0em 0.25em 0em 0em;
-   padding: 0.78571429em 1.5em 0.78571429em;
-   text-transform: none;
-   text-shadow: none;
-   font-weight: bold;
-   line-height: 1em;
-   font-style: normal;
-   text-align: center;
-   text-decoration: none;
-   border-radius: 0.28571429rem;
-   -webkit-box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
-   box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
-   -webkit-user-select: none;
-   -moz-user-select: none;
-   -ms-user-select: none;
-   user-select: none;
-   -webkit-transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
-   transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
-   transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, box-shadow 0.1s ease, background 0.1s ease;
-   transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, box-shadow 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
-   will-change: '';
-   -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
+  display: inline-block;
+  min-height: 1rem;
+  outline: none;
+  border: none;
+  vertical-align: baseline;
+  background: #E0E1E2 none;
+  color: rgba(0, 0, 0, 0.6);
+  font-family: 'Open Sans', sans-serif;
+  margin: 0 0.25rem 0 0;
+  padding: 0.7rem 1.3rem;
+  text-transform: none;
+  text-shadow: none;
+  font-weight: bold;
+  line-height: 1;
+  font-style: normal;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 0.28571429rem;
+  -webkit-box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+  box-shadow: 0px 0px 0px 1px transparent inset, 0px 0em 0px 0px rgba(34, 36, 38, 0.15) inset;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
+  transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
+  transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, box-shadow 0.1s ease, background 0.1s ease;
+  transition: opacity 0.1s ease, background-color 0.1s ease, color 0.1s ease, box-shadow 0.1s ease, background 0.1s ease, -webkit-box-shadow 0.1s ease;
+  will-change: '';
+  -webkit-tap-highlight-color: transparent;
  }
  
  /*******************************
@@ -5236,7 +4955,7 @@
  /* Text Container */
  
  .ui.text.container {
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    max-width: 700px !important;
    line-height: 1.5;
  }
@@ -6845,7 +6564,7 @@
    border: none;
    margin: calc(2rem -  0.14285714em ) 0em 1rem;
    padding: 0em 0em;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    line-height: 1.28571429em;
    text-transform: none;
@@ -14164,7 +13883,7 @@
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
    text-align: left;
    line-height: 1.21428571em;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    padding: 0.67857143em 1em;
    background: #FFFFFF;
    border: 1px solid rgba(34, 36, 38, 0.15);
@@ -16308,7 +16027,7 @@
  .ui.list > .item .header {
    display: block;
    margin: 0em;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    color: rgba(0, 0, 0, 0.87);
  }
@@ -19451,7 +19170,7 @@
  /* Title */
  
  .ui.steps .step .title {
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-size: 1.14285714em;
    font-weight: bold;
  }
@@ -20234,7 +19953,7 @@
  .ui.form input[type="text"],
  .ui.form input[type="file"],
  .ui.form input[type="url"] {
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    margin: 0em;
    outline: none;
    -webkit-appearance: none;
@@ -23643,7 +23362,7 @@
    display: -ms-flexbox;
    display: flex;
    margin: 1rem 0em;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    background: #FFFFFF;
    font-weight: normal;
    border: 1px solid rgba(34, 36, 38, 0.15);
@@ -25961,7 +25680,7 @@
  
  .ui.message .header {
    display: block;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    margin: -0.14285714em 0em 0rem 0em;
  }
@@ -28250,7 +27969,7 @@
  .ui.card > .content > .header {
    display: block;
    margin: '';
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    color: rgba(0, 0, 0, 0.85);
  }
  
@@ -29924,7 +29643,7 @@
  .ui.items > .item > .content > .header {
    display: inline-block;
    margin: -0.21425em 0em 0em;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    color: rgba(0, 0, 0, 0.85);
  }
@@ -30399,7 +30118,7 @@
  
  .ui.statistics .statistic > .value,
  .ui.statistic > .value {
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-size: 4rem;
    font-weight: normal;
    line-height: 1em;
@@ -30414,7 +30133,7 @@
  
  .ui.statistics .statistic > .label,
  .ui.statistic > .label {
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-size: 1em;
    font-weight: bold;
    color: rgba(0, 0, 0, 0.87);
@@ -30962,7 +30681,7 @@
  
  .ui.accordion .title:not(.ui) {
    padding: 0.5em 0em;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-size: 1em;
    color: rgba(0, 0, 0, 0.87);
  }
@@ -34032,7 +33751,7 @@
  
  .ui.modal > .header {
    display: block;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    background: #FFFFFF;
    margin: 0em;
    padding: 1.25rem 1.5rem;
@@ -34824,7 +34543,7 @@
  
  .ui.popup > .header {
    padding: 0em;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-size: 1.14285714em;
    line-height: 1.2;
    font-weight: bold;
@@ -36604,7 +36323,7 @@
  
  .ui.search > .results .result .title {
    margin: -0.14285714em 0em 0em;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    font-size: 1em;
    color: rgba(0, 0, 0, 0.85);
@@ -36630,7 +36349,7 @@
  }
  
  .ui.search > .results > .message .header {
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-size: 1rem;
    font-weight: bold;
    color: rgba(0, 0, 0, 0.87);
@@ -36847,7 +36566,7 @@
    width: 100px;
    white-space: nowrap;
    background: transparent;
-   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   font-family: 'Open Sans', sans-serif;
    font-size: 1em;
    padding: 0.4em 1em;
    font-weight: bold;
